<?xml version="1.0"?>
<package>
  <name>draco3_muvt</name>
  <version>0.0.1</version>
  <description>
        Muvt for Draco3 robot
  </description>
  <maintainer email="luca.rossini@iit.it">Luca Rossini</maintainer>
  <author>Luca Rossini</author>
  <license>GNU General Public License v3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>muvt_ros</run_depend>

</package>
